change index path

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li class="itemList">Tea</li>
         <li class="itemList">Milk</li>
     </ul>
-    <script src="testReduce1.js"></script>
+    <script src="scripts/testReduce1.js"></script>
 </body>
 
 </html>
