--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         margin-top: 4rem;
     }
 </style>
-
 <body>
     <h1 class="heading">Usefull Javascript Functions</h1>
     <div id="result"></div>
@@ -43,7 +42,6 @@
         <li class="itemList">Tea</li>
         <li class="itemList">Milk</li>
     </ul>
-    <script src="scripts/testReduce1.js"></script>
+    <script src="scripts/testArraydotfrom.js"></script>
 </body>
-
 </html>
