move index.html to scripts dir

--- a/scripts/JavaScript/index.html
+++ b/scripts/JavaScript/index.html
@@ -42,6 +42,6 @@
         <li class="itemList">Tea</li>
         <li class="itemList">Milk</li>
     </ul>
-    <script src="scripts/testArraydotfrom.js"></script>
+    <script src="testArraydotfrom.js"></script>
 </body>
 </html>
